[gd_scene load_steps=2 format=3 uid="uid://d1sscv0vttgjs"]

[ext_resource type="Script" path="res://menus/pause_overlay.gd" id="1_wm3dg"]

[node name="pausedoverlay" type="Node2D"]
process_mode = 3
script = ExtResource("1_wm3dg")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1156.0
offset_bottom = 654.0
color = Color(0, 0, 0, 0.196078)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 2
offset_top = 140.0
offset_right = 1153.0
offset_bottom = 163.0
text = "PAUSED"
horizontal_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 370.0
offset_top = 223.0
offset_right = 778.0
offset_bottom = 470.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="Options" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="Return to menu" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to title screen"

[node name="Quit2" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit game"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Return to menu" to="." method="_on_return_to_menu_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Quit2" to="." method="_on_quit_2_pressed"]
